# Sparta-Agent

./: .env.web  .eslintrc.cjs  .gitignore  .gitleaks.toml  .npmrc  DOCUMENTACION_PROYECTO.txt  LICENSE  README.md  SECURITY.md  TEST_PROMPTS.txt  electron-builder.json5  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  providers.catalog.json  sparta.mcp.example.json  sparta_mcp_catalog.json  test-agente.txt  test-workspace-root.txt  tsconfig.json  vite.config.ts  vitest.config.ts
python/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat
python/py-sparta-agents/: pyproject.toml
python/py-sparta-agents/src/sparta_agents/: __init__.py  emulated_reasoning.py  graph_helpers.py  graph_nodes.py  graph_state.py  reflection.py  router.py  sparta_agent.py
python/py-sparta-agents/tests/: test_agent.py  test_message_cleanup.py
python/py-sparta-audio/: pyproject.toml
python/py-sparta-audio/src/sparta_audio/: __init__.py
python/py-sparta-config/: pyproject.toml
python/py-sparta-config/src/sparta_config/: __init__.py  providers.py  security.py
python/py-sparta-errors/: pyproject.toml
python/py-sparta-errors/src/sparta_errors/: __init__.py  user_messages.py
python/py-sparta-errors/tests/: test_errors.py
python/py-sparta-handlers/: pyproject.toml
python/py-sparta-handlers/src/sparta_handlers/: __init__.py  agent_prepare.py  agent_state.py  agent_stream.py  agent_task.py  mcp_handlers.py  memory_handlers.py  tool_assembly.py  workspace.py
python/py-sparta-hooks/: pyproject.toml
python/py-sparta-hooks/src/sparta_hooks/: __init__.py  registry.py  runner.py
python/py-sparta-mcp/: pyproject.toml
python/py-sparta-mcp/src/sparta_mcp/: __init__.py  main.py  server.py  server_dispatch.py  server_handlers.py  server_stream.py  server_web.py  web_routes.py  web_stream.py  web_terminal.py  web_ws.py
python/py-sparta-mcp/tests/: test_mcp_client.py
python/py-sparta-memory/: pyproject.toml
python/py-sparta-memory/src/sparta_memory/: __init__.py  chroma_store.py  chroma_store_query.py  chroma_store_schema.py  chroma_store_write.py  chunking.py  context_manager.py  embeddings.py  summarizer.py
python/py-sparta-persistence/: pyproject.toml
python/py-sparta-persistence/src/sparta_persistence/: __init__.py
python/py-sparta-providers/: pyproject.toml
python/py-sparta-providers/src/sparta_providers/: __init__.py  free_tier_guard.py  retry_policy.py
python/py-sparta-providers/tests/: test_providers.py
python/py-sparta-security/: pyproject.toml
python/py-sparta-security/src/sparta_security/: __init__.py  command_sanitizer.py  exec_policy.py  path_guard.py  permission_policy.py  rate_limiter.py  scope_rules.py  secrets_redactor.py
python/py-sparta-security/tests/: test_security.py
python/py-sparta-skills/: pyproject.toml
python/py-sparta-skills/src/sparta_skills/: __init__.py  skill_bundles.py  skill_loader.py  skill_router.py
python/py-sparta-streaming/: pyproject.toml
python/py-sparta-streaming/src/sparta_streaming/: __init__.py  event_bridge.py  skill_detector.py  stream_state.py  think_scrubber.py  ws_adapter.py
python/py-sparta-streaming/tests/: test_repetition_guard.py  test_streaming.py  test_think_scrubber.py
python/py-sparta-tools/: pyproject.toml
python/py-sparta-tools/src/sparta_tools/: __init__.py  client_session.py  client_transport.py  code_search_tools.py  diagnostics_tool.py  file_tools.py  http_pool.py  manage_add.py  mcp_client.py  mcp_manage_tool.py  mcp_manager.py  memory_tools.py  patch_tools.py  permission_broker.py  permission_policies.py  plan_tool.py  skill_tools.py  suggestions.py  terminal_tools.py  web_fetch.py  web_search.py  web_search_providers.py
python/py-sparta-tools/tests/: test_tools.py
python/scripts/: migrate_skills.py
python/sparta_ai/: cli.py  main.py  server.py  server_handlers.py  server_web.py
python/sparta_ai/agents/: background_review.py  emulated_reasoning.py  message_cleanup.py  planner.py  reflection.py  router.py  sparta_agent.py
python/sparta_ai/agents/subagents/: code_agent.py  memory_agent.py  research_agent.py  review_agent.py
python/sparta_ai/audio/: __init__.py  transcriber.py
python/sparta_ai/cli/: __init__.py  __main__.py  app.py  banner.py  completion.py  logo.py  repl.py  theme.py
python/sparta_ai/cli/commands/: __init__.py  base.py  core.py  (+3 more)
python/sparta_ai/config/: providers.py
python/sparta_ai/errors/: __init__.py
python/sparta_ai/handlers/: __init__.py  agent_prepare.py  agent_state.py  agent_stream.py  agent_task.py  mcp_handlers.py  memory_handlers.py  tool_assembly.py  workspace.py
python/sparta_ai/hooks/: __init__.py  events.py  registry.py
python/sparta_ai/mcp_server/: server.py
python/sparta_ai/memory/: chroma_store.py  context_manager.py  extractor.py  graph_memory.py  rerank.py
python/sparta_ai/persistence/: sqlite_store.py
python/sparta_ai/providers/: free_tier_guard.py
python/sparta_ai/security/: command_sanitizer.py  exec_allowlist.py  permission_policy.py
python/sparta_ai/skills/: __init__.py  curator.py  skill_bundles.py  skill_loader.py  skill_preprocessing.py  skill_router.py  skill_usage.py  skills_guard.py  system_skills_installer.py
python/sparta_ai/skills_library/: .manifest.json
python/sparta_ai/streaming/: event_bridge.py  event_dispatcher.py  repetition_guard.py  skill_detector.py  stream_state.py  think_scrubber.py
python/sparta_ai/tests/: test_agent.py  test_mcp_client.py  test_memory.py  test_message_cleanup.py  test_providers.py  test_repetition_guard.py  test_security.py  test_streaming.py  test_think_scrubber.py  test_tools.py
python/sparta_ai/tools/: code_search_tools.py  diagnostics_tool.py  file_tools.py  mcp_bridge.py  mcp_client.py  mcp_manage_tool.py  mcp_manager.py  memory_tools.py  patch_tools.py  permission_broker.py  skill_tools.py  suggestions.py  terminal_tools.py  web_fetch.py  web_progress.py  web_search.py  web_search_providers.py
rust/sparta-security/: Cargo.toml  build.bat  package.json
rust/sparta-security/src/: guard.rs  lib.rs  sanitizer.rs  validator.rs
(+911 files in other folders)
