[project]
name = "sparta-agent-workspace"
version = "0.1.0"
description = "Sparta Agent monorepo workspace"
requires-python = ">=3.11"
dependencies = [
    "sparta-errors",
    "sparta-config",
    "sparta-security",
    "sparta-providers",
    "sparta-audio",
    "sparta-persistence",
    "sparta-hooks",
    "sparta-memory",
    "sparta-streaming",
    "sparta-tools",
    "sparta-skills",
    "sparta-agents",
    "sparta-handlers",
    "sparta-mcp",
]

[tool.uv.sources]
sparta-errors = { workspace = true }
sparta-config = { workspace = true }
sparta-security = { workspace = true }
sparta-providers = { workspace = true }
sparta-audio = { workspace = true }
sparta-persistence = { workspace = true }
sparta-hooks = { workspace = true }
sparta-memory = { workspace = true }
sparta-streaming = { workspace = true }
sparta-tools = { workspace = true }
sparta-skills = { workspace = true }
sparta-agents = { workspace = true }
sparta-handlers = { workspace = true }
sparta-mcp = { workspace = true }

[tool.uv.workspace]
members = [
    "py-sparta-errors",
    "py-sparta-config",
    "py-sparta-security",
    "py-sparta-providers",
    "py-sparta-audio",
    "py-sparta-persistence",
    "py-sparta-hooks",
    "py-sparta-memory",
    "py-sparta-streaming",
    "py-sparta-tools",
    "py-sparta-skills",
    "py-sparta-agents",
    "py-sparta-handlers",
    "py-sparta-mcp",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
