[project]
name = "sparta-errors"
version = "0.1.0"
description = "Sparta Agent — Sparta Errors"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ["tests"]
