[project]
name = "sparta-handlers"
version = "0.1.0"
description = "Sparta Agent — Sparta Handlers"
requires-python = ">=3.11"
dependencies = [
    "sparta-providers",
    "sparta-memory",
    "sparta-tools",
    "sparta-skills",
    "sparta-streaming",
    "sparta-agents",
    "sparta-errors",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sparta-providers = { workspace = true }
sparta-memory = { workspace = true }
sparta-tools = { workspace = true }
sparta-skills = { workspace = true }
sparta-streaming = { workspace = true }
sparta-agents = { workspace = true }
sparta-errors = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ["tests"]
