[project]
name = "sparta-mcp"
version = "0.1.0"
description = "Sparta Agent — Sparta Mcp"
requires-python = ">=3.11"
dependencies = [
    "sparta-agents",
    "sparta-handlers",
    "sparta-providers",
    "sparta-memory",
    "sparta-tools",
    "sparta-skills",
    "sparta-streaming",
    "sparta-security",
    "sparta-audio",
    "sparta-config",
    "sparta-errors",
    "sparta-persistence",
    "sparta-hooks",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=1.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "prompt_toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sparta-agents = { workspace = true }
sparta-handlers = { workspace = true }
sparta-providers = { workspace = true }
sparta-memory = { workspace = true }
sparta-tools = { workspace = true }
sparta-skills = { workspace = true }
sparta-streaming = { workspace = true }
sparta-security = { workspace = true }
sparta-audio = { workspace = true }
sparta-config = { workspace = true }
sparta-errors = { workspace = true }
sparta-persistence = { workspace = true }
sparta-hooks = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ["tests"]
