[package]
name = "sparta-security"
version = "0.1.0"
edition = "2021"
description = "Sparta Agent — Native Rust Security Layer for IPC validation & tool call sanitization"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "serde-json", "napi6"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
