[package]
name = "sparta-security"
version = "0.1.0"
edition = "2021"
description = "Sparta Agent — Native Rust Security Layer for IPC validation & tool call sanitization"

[lib]
crate-type = ["cdylib"]

[features]
default = []
safe_mode = []

[dependencies]
napi = { version = "2", features = ["async", "serde-json", "napi6"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

[build-dependencies]
napi-build = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
todo = "warn"
unimplemented = "warn"
cast_possible_truncation = "warn"
cast_possible_overflow = "warn"
cast_sign_loss = "warn"
integer_division_remainder_used = "warn"

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1
